--- a/index.html
+++ b/index.html
@@ -1240,24 +1240,24 @@ fries,Humms & Bread</a><span>₦ 3000</span>
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Rise and Shine to a Delicious Start</h3>
-                    <p class="fst-italic">Our breakfast menu at Bites of Paradise offers a delightful array of options to kickstart your day on a scrumptious note. From fluffy pancakes drizzled with maple syrup to golden French toast dusted with powdered sugar, our breakfast dishes are crafted with love and care.</p>
-                    <!-- <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p> -->
-                  </div>
-                  <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img style="border-radius: 50%;" src="assets/img/Baked Beans & Egg2.jpg" alt="" class="img-fluid">
-                  </div>
-                </div>
-              </div>
-              <div class="tab-pane" id="tab-2">
-                <div class="row">
-                  <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>A Traditional British Delight</h3>
                     <p class="fst-italic">Transport yourself to the streets of Nasarrawa, Kano with our traditional English breakfast. Indulge in a hearty meal that combines the best of British flavors and culinary traditions. Savor the aroma of sizzling bacon, relish the rich taste of grilled sausages, and delight in the golden goodness of perfectly fried eggs.</p>
                     <!-- <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p> -->
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img style="border-radius: 50%;" src="assets/img/breakfast.jpg" alt="" class="img-fluid">
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane" id="tab-2">
+                <div class="row">
+                  <div class="col-lg-8 details order-2 order-lg-1">
+                    <h3>Rise and Shine to a Delicious Start</h3>
+                    <p class="fst-italic">Our breakfast menu at Bites of Paradise offers a delightful array of options to kickstart your day on a scrumptious note. From fluffy pancakes drizzled with maple syrup to golden French toast dusted with powdered sugar, our breakfast dishes are crafted with love and care.</p>
+                    <!-- <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p> -->
+                  </div>
+                  <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <img style="border-radius: 50%;" src="assets/img/Baked Beans & Egg2.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -1771,8 +1771,8 @@ fries,Humms & Bread</a><span>₦ 3000</span>
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Bites of Paradise</span></strong>. All Rights Reserved
