--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body style="opacity: 0.1;">
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent">
